2003-11-26  Cyril Humbert  <Cyril.Humbert@univ-mlv.fr>

	* octave-config.in (--m-site-dir): Echo $LOCALVERFCNFILEDIR, not
	$OCTAVE_LOCALVERFCNFILEDIR.
	(--oct-site-dir): Echo $LOCALVEROCTFILEDIR, not
	$OCTAVE_LOCALVEROCTFILEDIR.

2003-11-20  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Also maybe add -W to WARN_CFLAGS and WARN_CXXFLAGS.

2003-11-15  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (SHLLIB_VER): Fix typo.

	* Makeconf.in (WARN_CFLAGS, WARN_CXXFLAGS): Substitute them.
	(ALL_CFLAGS, BUG_CFLAGS): Add $(WARN_CFLAGS).
	(ALL_CXXFLAGS, BUG_CXXFLAGS): Add $(WARN_CXXFLAGS).
	(UGLY_ALL_CXXFLAGS): Delete.

	* configure.in: Add -Wall and -Wshadow to WARN_CFLAGS and
	WARN_CXXFLAGS instead of CFLAGS and CXXFLAGS.

2003-11-12  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: If we need alloca, then also include it in LIBGLOB.

2003-11-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Preserve CFLAGS and CXXFLAGS before doing anything.
	Maybe add -Wshadow to CFLAGS and CXXFLAGS.

2003-10-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs/octave-mod.el (octave-comment-start): Simplify.
	(octave-point): Remove.
	(octave-in-comment-p, octave-in-string-p)
	(octave-not-in-string-or-comment-p, calculate-octave-indent)
	(octave-blink-matching-block-open, octave-auto-fill):
	Use line-(beginning|end)-position instead.

2003-10-29  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/octave-inf.el (inferior-octave-prompt): Don't bother
	matching "octave.bin".

2003-10-29  Lute Kamstra  <lute@gnu.org>

	* emacs/octave-inf.el (inferior-octave-prompt): Recognize
	version number in prompt.

2003-10-24  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/octave-mod.el (octave-mode-syntax-table): Allow % to be a
	comment character.

2003-10-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (AWK): Substitute and export it.
	* configure.in: Also check for AWK.

2003-10-07  John W. Eaton  <jwe@bevo.che.wisc.edu>
